--- a/app/src/main/res/layout/rate_item.xml
+++ b/app/src/main/res/layout/rate_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="wrap_content"
               android:layout_marginTop="5dp"
               android:layout_marginBottom="5dp"
               android:layout_marginLeft="12dp"
@@ -19,8 +19,8 @@
                 android:orientation="horizontal">
 
             <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="149dp"
+                    android:layout_height="match_parent"
                     android:textSize="8pt"
                     android:paddingBottom="5dp"
                     android:textColor="@color/colorBlack"
